--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -40,7 +40,7 @@
 /* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
 
 /*__write_selector_here__*/
-img {
+#basket img {
   position: absolute;
   z-index: 3;
   top: 217px;
